--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -4,10 +4,10 @@
 
   // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
-    "supervisor": {
-      "name": "supervisor",
-      "command": "/usr/bin/supervisord -c /etc/supervisor/conf.d/supervisor.conf",
-      "runAtStart": true
-    }
+    // "supervisor": {
+    //   "name": "supervisor",
+    //   "command": "/usr/bin/supervisord -c /etc/supervisor/conf.d/supervisor.conf",
+    //   "runAtStart": true
+    // }
   }
 }
